--- a/0.html
+++ b/0.html
@@ -5,5 +5,7 @@
 </head>
 <body style="background-color:lightblue;">
 <h1 style="color:blue;text-align:center;">XYZ Hospital</h1>
-<p1 style="color:green;"><a href="file:///C:/Users/DeLL/Documents/firstpage.html">Appintment</a></p1>
-<p1 style="color:green;"><a href="file:///C:/Users/DeLL/Documents/firstpage.html">cancelation</a></p1>
+<h2 style="color:black;text-align:center;">
+<a href="file:///C:/Users/DeLL/Documents/hackathon-project/firstpage.html">Appointment</a></h2>
+<h2 style="color:black;text-align:center;">
+<a href="file:///C:/Users/DeLL/Documents/hackathon-project/2.html">cancelation</a></h2>
