--- a/firstpage.html
+++ b/firstpage.html
@@ -13,6 +13,9 @@
 <li style="color:green;">Doctor 'B'<input type="checkbox"></li>
 <li style="color:green;">Doctor 'C'<input type="checkbox"></li>
 </ol>
+<p>(time will alloted according to doctor working hours)
+<p style="color:red;border-style: solid;text-align:center;">
+<a href="file:///C:/Users/DeLL/Documents/hackathon-project/3.html">submit</a></p>
 
 </body>
 </html>
